# nbodysim

./: .gitignore  Cargo.toml  build.rs
src/: main.rs  render.rs  shader.comp  shader.frag  shader.vert  shader.wgsl
